# fun-workflow

./: .env-example.toml  .gitignore  README.md  pyproject.toml  requirements.txt
fun_workflow/: __init__.py  _types.py
fun_workflow/config/: __init__.py  _config.py
fun_workflow/core/: _flow.py  _node.py  util.py
script/: unittest.sh
tests/: test_core.py  test_template.py  test_with_fastapi.py  test_with_flask.py  utils.py
