[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"


[project]
name            = "fun-workflow"
dynamic         = ["version"]
authors         = [{ name = "cool9203", email = "octer18@gmail.com" }]
description     = "Workflow engine and runner with pydantic"
readme          = "README.md"
requires-python = ">=3.8"
classifiers     = ["Programming Language :: Python :: 3"]
dependencies    = ["tomli>=2.0.1; python_version < '3.11'", "pydantic>=2"]
    [project.optional-dependencies]
    dev = ["fastapi>=0.100", "flask>=3", "coverage>=7", "pre-commit"]


[tool]
    [tool.ruff]
    target-version = "py310"
    line-length    = 130
    ignore         = ["E402", "F841", "F401", "E203"]

    [tool.isort]
    profile = "ruff"

    [tool.hatch.version]
    path = "fun_workflow/__init__.py"

    [tool.coverage.run]
    omit = ["*template*", "tests/*", "*__init__.py*"]

    [tool.coverage.report]
    precision = 2
    fail_under = 80.0
    show_missing = true
    skip_covered = true
    exclude_lines = [
        "# pragma: no cover",
        "@abc.abstractclassmethod",
        "@abc.abstractmethod",
        "pass",
        "if __name__ == *",
        "def __repr__",
        "if TYPE_CHECKING",
    ]
